--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -1,130 +1,27 @@
-<!-- Logo -->
-<div id="logo">
-  <h1><a href="<%- config.root %>"><%= config.title %></a></h1>
-  <h2><a href="<%- config.root %>"><% if (config.subtitle){ %><%= config.subtitle %><% } %></a></h2>
-</div>
-	
-<!-- Nav -->
-<nav id="nav">
-  <ul>
-    <% for (var i in theme.menu){ %>
+<div id="sidebar">
+  <!-- Logo -->
+  <div id="logo">
+    <h1><a href="<%- config.root %>"><%= config.title %></a></h1>
+    <h2><a href="<%- config.root %>"><% if (config.subtitle){ %><%= config.subtitle %><% } %></a></h2>
+  </div>
+  
+  <!-- Nav -->
+  <nav id="nav">
+    <ul>
+      <% for (var i in theme.menu){ %>
       <li><a href="<%- theme.menu[i] %>"><%= i %></a></li>
-    <% } %>
-  </ul>
-</nav>
+      <% } %>
+    </ul>
+  </nav>
 
-<!-- Search -->
-<section class="is-search">
-  <form method="post" action="#">
-    <input type="text" class="text" name="search" placeholder="Search" />
-  </form>
-</section>
 
-<!-- Hexo Widgets -->
-<section class="is-widgets">
-  <% theme.widgets.forEach(function(widget){ %>
-  <%- partial('../_widget/' + widget) %>
-  <% }); %>
-</section>	
+  <!-- Hexo Widgets -->
+  <section class="is-widgets">
+    <% theme.widgets.forEach(function(widget){ %>
+    <%- partial('../_widget/' + widget) %>
+    <% }); %>
+  </section>	
 
-<!-- Text -->
-<section class="is-text-style1">
-  <div class="inner">
-    <p>
-      <strong>Striped:</strong> A free and fully responsive HTML5 site
-      template designed by <a href="http://n33.co/">AJ</a> for <a href="http://html5up.net/">HTML5 up!</a>
-    </p>
-  </div>
-</section>
-	
-<!-- Recent Posts -->
-<section class="is-recent-posts">
-  <header>
-    <h2>Recent Posts</h2>
-  </header>
-  <ul>
-    <li><a href="#">Nothing happened</a></li>
-    <li><a href="#">My Dearest Cthulhu</a></li>
-    <li><a href="#">The Meme Meme</a></li>
-    <li><a href="#">Now Full Cyborg</a></li>
-    <li><a href="#">Temporal Flux</a></li>
-  </ul>
-</section>
-	
-<!-- Recent Comments -->
-<section class="is-recent-comments">
-  <header>
-    <h2>Recent Comments</h2>
-  </header>
-  <ul>
-    <li>case on <a href="#">Now Full Cyborg</a></li>
-    <li>molly on <a href="#">Untitled Post</a></li>
-    <li>case on <a href="#">Temporal Flux</a></li>
-  </ul>
-</section>
-
-<!-- Calendar -->
-<section class="is-calendar">
-  <div class="inner">
-    <table>
-      <caption>February 2013</caption>
-      <thead>
-	<tr>
-	  <th scope="col" title="Monday">M</th>
-	  <th scope="col" title="Tuesday">T</th>
-	  <th scope="col" title="Wednesday">W</th>
-	  <th scope="col" title="Thursday">T</th>
-	  <th scope="col" title="Friday">F</th>
-	  <th scope="col" title="Saturday">S</th>
-	  <th scope="col" title="Sunday">S</th>
-	</tr>
-      </thead>
-      <tbody>
-	<tr>
-	  <td colspan="4" class="pad"><span>&nbsp;</span></td>
-	  <td><span>1</span></td>
-	  <td><span>2</span></td>
-	  <td><span>3</span></td>
-	</tr>
-	<tr>
-	  <td><span>4</span></td>
-	  <td><span>5</span></td>
-	  <td><a href="#">6</a></td>
-	  <td><span>7</span></td>
-	  <td><span>8</span></td>
-	  <td><span>9</span></td>
-	  <td><a href="#">10</a></td>
-	</tr>
-	<tr>
-	  <td><span>11</span></td>
-	  <td><span>12</span></td>
-	  <td><span>13</span></td>
-	  <td class="today"><a href="#">14</a></td>
-	  <td><span>15</span></td>
-	  <td><span>16</span></td>
-	  <td><span>17</span></td>
-	</tr>
-	<tr>
-	  <td><span>18</span></td>
-	  <td><span>19</span></td>
-	  <td><span>20</span></td>
-	  <td><span>21</span></td>
-	  <td><span>22</span></td>
-	  <td><a href="#">23</a></td>
-	  <td><span>24</span></td>
-	</tr>
-	<tr>
-	  <td><a href="#">25</a></td>
-	  <td><span>26</span></td>
-	  <td><span>27</span></td>
-	  <td><span>28</span></td>
-	  <td class="pad" colspan="3"><span>&nbsp;</span></td>
-	</tr>
-      </tbody>
-    </table>
-  </div>
-</section>
-
-<!-- Copyright -->
-<%- partial('footer') %>
-
+  <!-- Copyright -->
+  <%- partial('footer') %>
+</div>
