--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -5,10 +5,6 @@
   <% } %>
   <div class="post-content">
     <header>
-      <% if (item.layout != 'page'){ %>
-        <div class="icon"></div>
-        <time datetime="<%= item.date.toDate().toISOString() %>"><a href="<%- config.root %><%- item.path %>"><%= item.date.format(config.date_format) %></a></time>
-      <% } %>
       <%- partial('post/title') %>
     </header>
   <div class="info">
@@ -20,7 +16,7 @@
 	the entire "date" element.
 	
       -->
-    <span class="date"><span class="month">Jan<span>uary</span></span> <span class="day">14</span><span class="year">, 2013</span></span>
+    <span class="date"><span class="month"><%= item.date.format('MMM') %></span> <span class="day"><%= item.date.format('D') %></span><span class="year">, <%= item.date.format('YYYY') %></span></span>
     <!--
 	Note: You can change the number of list items in "stats" to whatever you want.
       -->
