partials i may/not need later

--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,5 +1,5 @@
 <!-- Post -->
-<article class="is-post is-post-excerpt<%= item.layout %>">
+<article class="is-post is-post-excerpt">
   <% if (item.photos){ %>
     <%- partial('post/gallery') %>
   <% } %>
