--- a/layout/_widget/category.ejs
+++ b/layout/_widget/category.ejs
@@ -1,10 +1,11 @@
 <% if (site.categories.length){ %>
-<div class="widget tag">
-  <h3 class="title"><%= __('categories') %></h3>
-  <ul class="entry">
+<section>
+  <h2><%= __('categories') %></h2>
+  <ul>
   <% site.categories.sort('name').each(function(item){ %>
     <li><a href="<%- config.root %><%- item.path %>"><%= item.name %></a><small><%= item.posts.length %></small></li>
   <% }); %>
   </ul>
-</div>
+</section>
 <% } %>
+
