--- a/layout/_widget/recent_posts.ejs
+++ b/layout/_widget/recent_posts.ejs
@@ -1,12 +1,12 @@
 <% if (site.posts.length){ %>
-<div class="widget tag">
-  <h3 class="title"><%= __('recent_posts') %></h3>
-  <ul class="entry">
+<section class="is-recent-posts">
+  <h2><%= __('recent_posts') %></h2>
+  <ul>
     <% site.posts.sort('date', -1).limit(5).each(function(post){ %>
       <li>
         <a href="<%= config.root %><%= post.path %>"><%= post.title %></a>
       </li>
     <% }); %>
   </ul>
-</div>
+</section>
 <% } %>
