--- a/layout/_widget/tagcloud.ejs
+++ b/layout/_widget/tagcloud.ejs
@@ -1,6 +1,6 @@
 <% if (site.tags.length){ %>
-<div class="widget tagcloud">
-  <h3 class="title"><%= __('tagcloud') %></h3>
+<div>
+  <h3><%= __('tagcloud') %></h3>
   <div class="entry">
     <%- tagcloud(site.tags, {}) %>
   </div>
