--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -42,18 +42,21 @@
   <% } else { %>
     <meta property="og:image" content="<%= config.cover %>"/>
   <% } %>
-
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700" rel="stylesheet" />
+  <link rel="stylesheet" href="<%- config.root %>css/tomorrow-night.css" />
   <script src="<%- config.root %>js/jquery.min.js"></script>
   <script src="<%- config.root %>js/skel.min.js"></script>
   <script src="<%- config.root %>js/skel-panels.min.js"></script>
   <script src="<%- config.root %>js/init.js"></script>
+  <script src="<%- config.root %>js/highlight.pack.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <noscript>
     <link rel="stylesheet" href="<%- config.root %>css/skel-noscript.css" />
     <link rel="stylesheet" href="<%- config.root %>css/style.css" />
     <link rel="stylesheet" href="<%- config.root %>css/style-desktop.css" />
     <link rel="stylesheet" href="<%- config.root %>css/style-wide.css" />
   </noscript>
+
   <!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
   <!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
   <!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
