--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -20,12 +20,17 @@
     <!--
 	Note: You can change the number of list items in "stats" to whatever you want.
       -->
+
     <ul class="stats">
+      <%- partial('post/share_vertical') %>
+      <!--
       <li><a href="#" class="fa fa-comment">16</a></li>
       <li><a href="#" class="fa fa-heart">32</a></li>
       <li><a href="#" class="fa fa-twitter">64</a></li>
       <li><a href="#" class="fa fa-facebook">128</a></li>
+      -->
     </ul>
+
   </div>
   <div class="entry">
   <% if (item.excerpt && index){ %>
