--- a/source/css/style-desktop.css
+++ b/source/css/style-desktop.css
@@ -176,7 +176,7 @@
 		position: absolute;
 		top: 0;
 		padding: 3em 1.35em 1em 1.15em;
-		height: 100%;
+		/* height: 100%; */
 		width: 14em; /* = whatever you want */
 		background: #364050 url('images/bg1.png');
 		box-shadow: inset -0.1em 0em 0.35em 0em rgba(0,0,0,0.15);
