Fix compatilibyt issues with latest hexo
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/layout/_widget/category.ejs
+++ b/layout/_widget/category.ejs
@@ -1,11 +1,8 @@
 <% if (site.categories.length){ %>
-<section>
-  <h2><%= __('categories') %></h2>
-  <ul>
-  <% site.categories.sort('name').each(function(item){ %>
-    <li><a href="<%- config.root %><%- item.path %>"><%= item.name %></a><small><%= item.posts.length %></small></li>
-  <% }); %>
-  </ul>
-</section>
-<% } %>
-
+  <section>
+    <h2><%= __('categories') %></h2>
+    <ul>
+      <%- list_categories() %>
+    </ul>
+  </section>
+  <% } %>
