--- a/layout/_widget/tagcloud.ejs
+++ b/layout/_widget/tagcloud.ejs
@@ -2,7 +2,7 @@
 <div>
   <h3><%= __('tagcloud') %></h3>
   <div class="entry">
-    <%- tagcloud(site.tags, {}) %>
+      <%- tagcloud() %>
   </div>
 </div>
 <% } %>
