--- a/layout/_widget/recent_posts.ejs
+++ b/layout/_widget/recent_posts.ejs
@@ -1,12 +1,14 @@
 <% if (site.posts.length){ %>
-<section class="is-recent-posts">
-  <h2><%= __('recent_posts') %></h2>
-  <ul>
-    <% site.posts.sort('date', -1).limit(5).each(function(post){ %>
-      <li>
-        <a href="<%= config.root %><%= post.path %>"><%= post.title %></a>
-      </li>
-    <% }); %>
-  </ul>
-</section>
-<% } %>
+  <section class="is-recent-posts">
+    <h2>Recent Posts</h2>
+    <ul>
+      <% site.posts.sort( 'date', -1).limit(5).each(function(post){ %>
+        <li>
+          <a href="<%- url_for(post.path) %>">
+            <%=p ost.title || '(no title)' %>
+          </a>
+        </li>
+        <% }); %>
+    </ul>
+  </section>
+  <% } %>
