--- a/layout/_widget/tag.ejs
+++ b/layout/_widget/tag.ejs
@@ -2,9 +2,7 @@
 <section>
   <h2><%= __('tags') %></h2>
   <ul>
-  <% site.tags.sort('name').each(function(item){ %>
-    <li><a href="<%- config.root %><%- item.path %>"><%= item.name %></a><%= item.posts.length %></li>
-  <% }); %>
+       <%- list_tags() %>
   </ul>
 </section>
 <% } %>
