--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,5 +1,1 @@
-<% page.posts.each(function(item){ %>
-  <%- partial('_partial/article', {item: item, index: true}) %>
-<% }); %>
-
-<%- partial('_partial/pagination') %>
+<%- partial('_partial/archive', {pagination: 2, index: true}) %>
