--- a/source/css/style-desktop.css
+++ b/source/css/style-desktop.css
@@ -1,5 +1,5 @@
 /*
-	Striped 2.5 by HTML5 Up!
+	Striped by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,20 +8,16 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	html
-	{
-	}
-
-	input, textarea
-	{
-	}
-
 	body
 	{
-		line-height: 1.75em;
 		height: 100%;
 	}
 	
+	body,input,textarea,select
+	{
+		line-height: 1.75em;
+	}
+
 	h2
 	{
 		font-size: 1.2em;
@@ -32,96 +28,114 @@
 		font-size: 1em;
 	}
 
-	.button
-	{
-		display: inline-block;
-		padding: 0.5em 2em 0.5em 2em;
-	}
-	
-		.button-small
-		{
-			font-size: 0.85em;
-			padding: 0.35em 1.5em 0.35em 1.5em;
-		}
-	
-		.button-big
-		{
-			font-size: 1.25em;
-			padding: 0.75em 2em 0.75em 2em;
-		}
-	
-		.button-huge
-		{
-			font-size: 1.5em;
-			padding: 0.75em 2em 0.75em 2em;
-		}
+	/* Button */
 
-	.pager
-	{
-		padding: 3em 0 0 0;
-	}
-
-		.pager .pages
+		input[type="button"],
+		input[type="submit"],
+		input[type="reset"],
+		.button
 		{
-		}
-
-		.pager .previous
-		{
-			margin-right: 0.6em;
-		}
-
-		.pager .next
-		{
-			margin-left: 0.2em;
-		}
-
-		.pager .pages a
-		{
-			width: 2.75em;
-			height: 2.75em;
-			line-height: 2.75em;
+			display: inline-block;
+			padding: 0.5em 2em 0.5em 2em;
 		}
 		
-		.pager .button
+			input[type="button"].small,
+			input[type="submit"].small,
+			input[type="reset"].small,
+			.button.small
+			{
+				font-size: 0.85em;
+				padding: 0.35em 1.5em 0.35em 1.5em;
+			}
+		
+			input[type="button"].big,
+			input[type="submit"].big,
+			input[type="reset"].big,
+			.button.big
+			{
+				font-size: 1.25em;
+				padding: 0.75em 2em 0.75em 2em;
+			}
+		
+			input[type="button"].huge,
+			input[type="submit"].huge,
+			input[type="reset"].huge,
+			.button.huge
+			{
+				font-size: 1.5em;
+				padding: 0.75em 2em 0.75em 2em;
+			}
+
+	/* Pagination */
+
+		.pagination
 		{
-			height: 2.75em;
-			padding-top: 0;
-			padding-bottom: 0;
-			line-height: 2.75em;
+			padding: 3em 0 0 0;
 		}
 
-/*********************************************************************************/
-/* Section/Article Types                                                         */
-/*********************************************************************************/
-
-	.is-post
-	{
-	}
-
-		.is-post .info
-		{
-		}
-
-			.is-post .info .stats
+			.pagination .pages
 			{
 			}
+
+			.pagination .previous
+			{
+				margin-right: 0.6em;
+			}
+
+			.pagination .next
+			{
+				margin-left: 0.2em;
+			}
+
+			.pagination .pages a
+			{
+				width: 2.75em;
+				height: 2.75em;
+				line-height: 2.75em;
+			}
 			
-				.is-post .info .stats li a
+			.pagination .button
+			{
+				height: 2.75em;
+				padding-top: 0;
+				padding-bottom: 0;
+				line-height: 2.75em;
+			}
+
+	/* Box */
+
+		.box
+		{
+		}
+
+			.box.post
+			{
+			}
+
+				.box.post .info
 				{
-					border-radius: 0.4em;
-					opacity: 0.5;
-					-moz-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
-					-webkit-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
-					-o-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
-					-ms-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
-					transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
 				}
 
-					.is-post .info .stats li:hover a
+					.box.post .info .stats
 					{
-						background-color: #f4f4f4;
-						opacity: 1.0;
 					}
+					
+						.box.post .info .stats li a
+						{
+							border-radius: 0.4em;
+							opacity: 0.5;
+							-moz-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
+							-webkit-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
+							-o-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
+							-ms-transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
+							transition: opacity .25s ease-in-out, background-color .25s ease-in-out;
+						}
+
+							.box.post .info .stats li:hover a
+							{
+								background-color: #f4f4f4;
+								opacity: 1.0;
+							}
 		
 /*********************************************************************************/
 /* Logo                                                                          */
@@ -129,21 +143,23 @@
 
 	#logo
 	{
-		background-color: #c94663;
-		background-image: url('images/bg1.png');
-		padding: 1.75em 0.5em 1.75em 0.5em;
-		border-radius: 0.4em;
-		text-align: center;
-		box-shadow: inset 0px 0px 0px 1px rgba(255,255,255,0.15), 0 0.025em 0.15em 0em rgba(0,0,0,0.25);
+		font-family: 'Open Sans Condensed', sans-serif;
+		font-weight: 700;
+		font-size: 2em;
+		letter-spacing: 0.1em;
 	}
-
-		#logo h1
+	
+		#logo a
 		{
-			font-family: 'Open Sans Condensed', sans-serif;
-			font-weight: 700;
+			display: block;
+			background-color: #c94663;
+			background-image: url('images/bg01.png');
+			padding: 0.875em 0.25em;
+			border-radius: 0.2em;
+			text-align: center;
+			box-shadow: inset 0px 0px 0px 1px rgba(255,255,255,0.15), 0 0.025em 0.15em 0em rgba(0,0,0,0.25);
+			text-decoration: none;
 			color: #fff;
-			font-size: 2em;
-			letter-spacing: 0.1em;
 		}
 
 /*********************************************************************************/
@@ -152,20 +168,20 @@
 		
 	#content
 	{
-		height: 100%;
 		box-shadow: 0 0 0.25em 0em rgba(0,0,0,0.25);
 	}
 
-	#content-inner
-	{
-		/*
-			This sets an upper limit to the width of your page content. Prevents
-			it from looking insane on super wide displays. By default I've set it
-			to the width of the sample post images, but you can change it to
-			whatever you like (or remote it entirely).
-		*/
-		max-width: 1038px;
-	}
+		#content > .inner
+		{
+			/*
+				This sets an upper limit on your page content to prevent it
+				from looking insane on really wide displays. It's currently set
+				to the width of the sample post images, but you can change it to
+				whatever you like (or remove it entirely).
+			*/
+			max-width: 1038px;
+			padding-bottom: 2em;
+		}
 
 /*********************************************************************************/
 /* Sidebar                                                                       */
@@ -176,9 +192,8 @@
 		position: absolute;
 		top: 0;
 		padding: 3em 1.35em 1em 1.15em;
-		/* height: 100%; */
 		width: 14em; /* = whatever you want */
-		background: #364050 url('images/bg1.png');
+		background: #364050 url('images/bg01.png');
 		box-shadow: inset -0.1em 0em 0.35em 0em rgba(0,0,0,0.15);
 	}
 
