--- a/source/css/style-mobile.css
+++ b/source/css/style-mobile.css
@@ -1,5 +1,5 @@
 /*
-	Striped 2.5 by HTML5 Up!
+	Striped by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,7 +8,7 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body, input, textarea
+	body,input,textarea,select
 	{
 		line-height: 1.75em;
 		font-size: 11pt;
@@ -20,186 +20,119 @@
 		font-size: 1.5em;
 	}
 
-	section,
-	article
-	{
-		clear: both;
-	}
+	/* Section/Article */
 
-	.button
-	{
-		display: block;
-		width: 100%;
-		font-size: 1.25em;
-		padding: 0.75em 0 0.75em 0;
-		margin: 0.5em 0 0.5em 0;
-	}
-
-	.pager
-	{
-	}
-
-		.pager .pages
+		section,
+		article
 		{
-			display: none;
+			clear: both;
 		}
 
-/*********************************************************************************/
-/* Title Bar                                                                     */
-/*********************************************************************************/
+	/* Button */
 
-	#titleBar
-	{
-		background: #364050 url('images/bg1.png');
-	}
-
-	#titleBar .title
-	{
-		color: #fff;
-		line-height: 44px;
-		font-size: 1.25em;
-		font-family: 'Open Sans Condensed', sans-serif;
-		font-weight: 700;
-		letter-spacing: 0.1em;
-		text-shadow: -1px -1px 0px rgba(0,0,0,0.5);
-		box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
-		text-align: center;
-	}
-
-	#titleBar .toggle
-	{
-		text-indent: -9999px;
-		width: 80px;
-		height: 60px;
-		position: absolute;
-		left: 0;
-		top: 0;
-	}
-
-		#titleBar .toggle:before
+		input[type="button"],
+		input[type="submit"],
+		input[type="reset"],
+		.button
 		{
-			content: '';
 			display: block;
-			position: absolute;
-			left: 7px;
-			top: 7px;
-			width: 50px;
-			height: 30px;
-			background: #c94663 url('images/bg1.png');
-			border-radius: 5px;
-			box-shadow: inset 0px 0px 0px 1px rgba(255,255,255,0.15), 0 0.025em 0.15em 0em rgba(0,0,0,0.25);
-		}
-
-		#titleBar .toggle:after
-		{
-			content: '';
-			display: block;
-			position: absolute;
-			left: 22px;
-			top: 15px;
-			width: 50px;
-			height: 30px;
-			background: url('images/mobileUI-site-nav-opener-bg.svg') 0 0 no-repeat;
-			opacity: 0.75;
-		}
-
-		#titleBar .toggle:active
-		{
-		}
-
-			#titleBar .toggle:active:before
-			{
-				background-color: #d95673;
-			}
-
-			#titleBar .toggle:active:after
-			{
-				opacity: 1.0;
-			}
-
-/*********************************************************************************/
-/* Side Panel                                                                    */
-/*********************************************************************************/
-
-	#sidePanel
-	{
-		background: #28303a url('images/bg1.png');
-	}
-
-/*********************************************************************************/
-/* Section/Article Types                                                         */
-/*********************************************************************************/
-
-	.is-post
-	{
-		padding-bottom: 5em;
-		margin-bottom: 6em;
-	}
-
-		.is-post .byline
-		{
-			font-size: 1em;
-			font-family: 'Source Sans Pro', sans-serif;
-			line-height: 1.5em;
-		}
-
-		.is-post .info
-		{
 			width: 100%;
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			border-top: solid 1px #ddd;
-			padding-top: 0.5em;
+			font-size: 1.25em;
+			padding: 0.75em 0 0.75em 0;
+			margin: 0.5em 0 0.5em 0;
 		}
 
-			.is-post .info .date
-			{
-				display: inline;
-			}
-			
-				.is-post .info .date .year
-				{
-					display: none;
-				}
-				
-				.is-post .info .date .month span
-				{
-					display: none;
-				}
+	/* Pagination */
 
-			.is-post .info .stats
+		.pagination
+		{
+		}
+
+			.pagination .pages
 			{
-				display: inline;
-				border-left: solid 1px #ddd;
-				margin-left: 0.75em;
-				padding-left: 0.75em;
+				display: none;
 			}
 
-				.is-post .info .stats li
+	/* Box */
+
+		.box
+		{
+		}
+
+			.box.post
+			{
+				padding-bottom: 5em;
+				margin-bottom: 6em;
+			}
+
+				.box.post header
 				{
-					display: inline-block;
-					margin-right: 0.85em;
 				}
 
-					.is-post .info .stats li a
+					.box.post header > p
 					{
-						display: inline-block;
-						opacity: 0.5;
+						font-size: 1em;
+						font-family: 'Source Sans Pro', sans-serif;
+						line-height: 1.5em;
 					}
 
-						.is-post .info .stats li a:before
+				.box.post .info
+				{
+					width: 100%;
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					border-top: solid 1px #ddd;
+					padding-top: 0.5em;
+				}
+
+					.box.post .info .date
+					{
+						display: inline;
+					}
+					
+						.box.post .info .date .year
 						{
-							position: relative;
-							top: 0.1em;
-							margin-right: 0.5em;
-							opacity: 0.35;
+							display: none;
+						}
+						
+						.box.post .info .date .month span
+						{
+							display: none;
 						}
 
-						.is-post .info .stats li a:active
+					.box.post .info .stats
+					{
+						display: inline;
+						border-left: solid 1px #ddd;
+						margin-left: 0.75em;
+						padding-left: 0.75em;
+					}
+
+						.box.post .info .stats li
 						{
-							opacity: 1.0;
+							display: inline-block;
+							margin-right: 0.85em;
 						}
+
+							.box.post .info .stats li a
+							{
+								display: inline-block;
+								opacity: 0.5;
+							}
+
+								.box.post .info .stats li a:before
+								{
+									position: relative;
+									top: 0.1em;
+									margin-right: 0.5em;
+									opacity: 0.35;
+								}
+
+								.box.post .info .stats li a:active
+								{
+									opacity: 1.0;
+								}
 
 /*********************************************************************************/
 /* Logo                                                                          */
@@ -246,7 +179,6 @@
 	#sidebar
 	{
 		padding: 20px 12px 20px 10px;
-		background: #364050 url('images/bg1.png');
 		box-shadow: inset -1px 0 0 0 rgba(255,255,255,0.15), inset -0.1em 0 0.5em 0 rgba(0,0,0,0.25);
 	}
 	
