--- a/source/css/style-narrow.css
+++ b/source/css/style-narrow.css
@@ -1,5 +1,5 @@
 /*
-	Striped 2.5 by HTML5 Up!
+	Striped by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -13,87 +13,83 @@
 		min-width: 1000px;
 	}
 	
-	input, textarea
-	{
-		font-size: 10.5pt;
-	}
-
-	body
+	body,input,textarea,select
 	{
 		font-size: 11pt;
 	}
 
-/*********************************************************************************/
-/* Section/Article Types                                                         */
-/*********************************************************************************/
+	/* Box */
 
-	.is-post
-	{
-	}
-
-		.is-post h2
+		.box
 		{
-			font-size: 3.25em;
-			line-height: 1.25em;
 		}
 
-		.is-post header
-		{
-			padding: 1.5em 0 0 0;
-			margin: 0 0 3em 0;
-		}
-
-		.is-post .byline
-		{
-			font-size: 1.75em;
-			line-height: 1.5em;
-			position: relative;
-			top: -0.75em;
-			margin-bottom: -0.75em;
-		}
-
-		.is-post .info
-		{
-			width: 100%;
-			padding: 1em 0 0 0;
-			position: relative;
-			top: -2em;
-		}
-
-			.is-post .info .date
+			.box.post
 			{
-				display: inline;
 			}
 
-			.is-post .info .stats
-			{
-				display: inline;
-				border-left: solid 1px #ddd;
-				margin-left: 1.15em;
-				padding-left: 0.25em;
-			}
-
-				.is-post .info .stats li
+				.box.post h2
 				{
-					display: inline-block;
-					margin-left: 0.25em;
+					font-size: 3.25em;
+					line-height: 1.25em;
 				}
 
-					.is-post .info .stats li a
+				.box.post header
+				{
+					padding: 1.5em 0 0 0;
+					margin: 0 0 3em 0;
+				}
+
+					.box.post header > p
 					{
-						display: inline-block;
-						padding-right: 0.5em;
+						font-size: 1.75em;
+						line-height: 1.5em;
+						position: relative;
+						top: -0.75em;
+						margin-bottom: -0.75em;
 					}
-					
-						.is-post .info .stats li a:before
+
+				.box.post .info
+				{
+					width: 100%;
+					padding: 1em 0 0 0;
+					position: relative;
+					top: -2em;
+				}
+
+					.box.post .info .date
+					{
+						display: inline;
+					}
+
+					.box.post .info .stats
+					{
+						display: inline;
+						border-left: solid 1px #ddd;
+						margin-left: 1em;
+						padding-left: 1em;
+					}
+
+						.box.post .info .stats li
 						{
-							position: relative;
-							width: 1.75em;
-							text-align: center;
-							margin-right: 0.25em;
-							opacity: 0.35;
-							top: 0.1em;
+							display: inline-block;
+							margin-left: 0.25em;
 						}
+
+							.box.post .info .stats li a
+							{
+								display: inline-block;
+								padding-right: 0.5em;
+							}
+							
+								.box.post .info .stats li a:before
+								{
+									position: relative;
+									width: 1.75em;
+									text-align: center;
+									margin-right: 0.35em;
+									opacity: 0.35;
+								}
 
 /*********************************************************************************/
 /* Content                                                                       */
@@ -113,4 +109,3 @@
 		{
 			margin-right: 14em; /* = sidebar width */
 		}
-
