update templates to latest hexo helpers
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/layout/_widget/category.ejs
+++ b/layout/_widget/category.ejs
@@ -1,6 +1,8 @@
 <% if (site.categories.length){ %>
   <section>
-    <h2><%= __('categories') %></h2>
+    <header>
+      <h2><%= __('categories') %></h2>
+    </header>
     <ul>
       <%- list_categories() %>
     </ul>
