--- a/layout/_partial/article.ejs
+++ b/layout/_partial/article.ejs
@@ -1,26 +1,13 @@
 <!-- Post -->
-<article class="is-post is-post-excerpt">
+<article class="box post post-excerpt">
   <% if (item.photos){ %>
     <%- partial('post/gallery') %>
   <% } %>
-  <div class="post-content">
-    <header>
-      <%- partial('post/title') %>
-    </header>
+  <header>
+    <%- partial('post/title') %>
+  </header>
   <div class="info">
-    <!--
-	Note: The date should be formatted exactly as it's shown below. In particular, the
-	"least significant" characters of the month should be encapsulated in a <span>
-	element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
-	Oh, and if you don't need a date for a particular page or post you can simply delete
-	the entire "date" element.
-	
-      -->
     <span class="date"><span class="month"><%= item.date.format('MMM') %></span> <span class="day"><%= item.date.format('D') %></span><span class="year">, <%= item.date.format('YYYY') %></span></span>
-    <!--
-	Note: You can change the number of list items in "stats" to whatever you want.
-      -->
-
     <ul class="stats">
       <%- partial('post/share_vertical') %>
       <!--
@@ -30,28 +17,13 @@
       <li><a href="#" class="fa fa-facebook">128</a></li>
       -->
     </ul>
-
   </div>
-  <div class="entry">
+  <p>
   <% if (item.excerpt && index){ %>
     <%- item.excerpt %>
   <% } else { %>
     <%- item.content %>
   <% } %>
-  </div>
-  <footer>
-    <% if (index){ %>
-     <% if (item.excerpt){ %>
-      <a href="<%- config.root %><%- item.path %>#more" class="more-link"><%= theme.excerpt_link %></a>
-     <% } %>
-     <% if (item.comment && config.disqus_shortname){ %>
-       <a href="<%- item.permalink %>#disqus_thread" class="comment-link">Comments</a>
-     <% } %>
-    <% } else { %>
-      <%- partial('post/category') %>
-      <%- partial('post/tag') %>
-      <%- partial('post/share') %>
-    <% } %>
-  </footer>
+  </p>
 </article>
 <%- partial('comment') %>
