--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -3,66 +3,62 @@
 	Striped 2.5 by HTML5 Up!
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-	Ported to Hexo by Adam Stokes @ajscg
+	Ported to Hexo by Adam Stokes @battlemidget
 -->
 <html>
   <head>
-  <meta charset="utf-8">
-  <%
-  var title = [];
-  if (page.current > 1) title.push(__('page', page.current));
-  if (page.title) title.push(page.title);
-  if (page.category) title.push(page.category);
-  if (page.tag) title.push(page.tag);
-  if (page.archive){
-    if (page.year) title.push(__('archive_b', page.year + (page.month ? '/' + page.month : '')));
-    else title.push(__('archive_a'));
-  }
-  title.push(config.title);
-  %>
-  <title><%= title.join(' | ') %></title>
-  <% if (config.author){ %><meta name="author" content="<%= config.author %>"><% } %>
-  <% if (page.description){ %>
-  <meta name="description" content="<%= page.description %>">
-  <% } else if (config.description){ %>
-  <meta name="description" content="<%= config.description %>">
-  <% } else if (page.excerpt){ %>
-  <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
-  <% } else if (page.content){ %>
-  <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
-  <% } %>
-  <% if (page.keywords){ %><meta name="keywords" content="<%= page.keywords %>"><% } %>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <%
+        var title = page.title;
 
-  <% if (page.title){ %><meta property="og:title" content="<%= page.title %>"/><% } %>
-  <meta property="og:site_name" content="<%= config.title %>"/>
+        if (is_archive()){
+          title = 'Archives';
 
-  <% if(page.cover) { %>
-    <meta property="og:image" content="<%= page.cover %>" />
-  <% } else { %>
-    <meta property="og:image" content="<%= config.cover %>"/>
-  <% } %>
-  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700" rel="stylesheet" />
+          if (is_month()){
+            title += ': ' + page.year + '/' + page.month;
+          } else if (is_year()){
+            title += ': ' + page.year;
+          }
+        } else if (is_category()){
+          title = 'Category: ' + page.category;
+        } else if (is_tag()){
+          title = 'Tag: ' + page.tag;
+        }
+    %>
+    <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-  <script src="<%- config.root %>js/jquery.min.js"></script>
-  <script src="<%- config.root %>js/skel.min.js"></script>
-  <script src="<%- config.root %>js/skel-panels.min.js"></script>
-  <script src="<%- config.root %>js/init.js"></script>
-  <noscript>
-    <link rel="stylesheet" href="<%- config.root %>css/skel-noscript.css" />
-    <link rel="stylesheet" href="<%- config.root %>css/style.css" />
-    <link rel="stylesheet" href="<%- config.root %>css/style-desktop.css" />
-    <link rel="stylesheet" href="<%- config.root %>css/style-wide.css" />
-  </noscript>
+    <% if (config.author){ %>
+        <meta name="author" content="<%= config.author %>">
+    <% } %>
+    <% if (page.description){ %>
+        <meta name="description" content="<%= page.description %>">
+    <% } else if (config.description){ %>
+        <meta name="description" content="<%= config.description %>">
+    <% } else if (page.excerpt) { %>
+        <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+    <% } else if (page.content) { %>
+        <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+    <% } %>
+    <% if (page.keywords){ %>
+        <meta name="keywords" content="<%= page.keywords %>">
+    <% } %>
+    <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+    <%- js('js/jquery.min.js') %>
+    <%- js('js/skel.min.js') %>
+    <%- js('js/skel-panels.min.js') %>
+    <%- js('js/init.js') %>
+    <noscript>
+        <%- css('css/style.css') %>
+        <%- css('css/style-desktop.css') %>
+        <%- css('css/style-wide.css') %>
+    </noscript>
+    <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+    <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
+    <%- css('js/styles/tomorrow-night.css') %>
+    <%- js('js/highlight.pack.js') %>
+    <script>
+        hljs.initHighlightingOnLoad();
+    </script>
 
-  <!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
-  <!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-  <!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
-  <link rel="alternate" href="<% if (theme.rss){ %><%- theme.rss %><% } else { %><%- config.root %>atom.xml<% } %>" title="<%= config.title %>" type="application/atom+xml">
-  <link rel="stylesheet" href="<%- config.root %>js/styles/tomorrow-night.css" />
-  <script src="<%- config.root %>js/highlight.pack.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
-
-  <%- partial('google_analytics') %>
+    <%- partial( 'google_analytics') %>
   </head>
-
