--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -1,5 +1,5 @@
 <!-- Search -->
-<section class="is-search">
+<section class="box search">
   <form action="//google.com/search" method="get" accept-charset="utf-8">
     <input type="search" class="text" name="q" results="0" placeholder="<%= __('search') %>">
     <input type="hidden" name="q" value="site:<%- config.url.replace(/^https?:\/\//, '') %>">
