add more partials, fix article var
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/layout/_partial/archive.ejs
+++ b/layout/_partial/archive.ejs
@@ -1,40 +1,33 @@
-<%
-var title = '';
-if (page.category) title = page.category;
-if (page.tag) title = page.tag;
-if (page.archive){
-  if (page.year) title = page.year + (page.month ? '/' + page.month : '');
-  else title = __('archive_a');
-}
-%>
-<h2 class="archive-title<% if (page.tag){ %> tag<% } else if (page.category){ %> category<% } %>"><%= title %></h2>
-
 <% if (pagination == 2){ %>
-  <% page.posts.each(function(item){ %>
-    <%- partial('article', {item: item, index: true}) %>
-  <% }); %>
-
-  <%- partial('pagination') %>
+  <% page.posts.each(function(post){ %>
+    <%- partial('article', {post: post, index: true}) %>
+  <% }) %>
+  <% if (page.total > 1){ %>
+    <nav id="page-nav">
+      <%- paginator({
+        prev_text: '&laquo; Prev',
+        next_text: 'Next &raquo;'
+      }) %>
+    </nav>
+  <% } %>
 <% } else { %>
-  <div class="archive">
-    <% page.posts.each(function(item){ %>
-      <article class="<%= item.layout %>">
-        <div class="post-content">
-          <header>
-            <div class="icon"></div>
-            <time datetime="<%= item.date.toDate().toISOString() %>"><a href="<%- config.root %><%- item.path %>"><%= item.date.format(config.date_format) %></a></time>
-            <% if (item.link){ %>
-              <% if (item.title){ %>
-                <h1 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.title %></a></h1>
-              <% } else { %>
-                <h1 class="title link"><a href="<%- item.link %>" target="_blank"><%= item.link %></a></h1>
-              <% } %>
-            <% } else { %>
-              <h1 class="title"><a href="<%- config.root %><%- item.path %>"><%= item.title %></a></h1>
-            <% } %>
-          </header>
+  <% var last; %>
+  <% page.posts.each(function(post, i){ %>
+    <% var year = post.date.year(); %>
+    <% if (last != year){ %>
+      <% if (last != null){ %>
+        </div></section>
+      <% } %>
+      <% last = year; %>
+      <section class="archives-wrap">
+        <div class="archive-year-wrap">
+          <a href="<%- url_for('archives/' + year) %>" class="archive-year"><%= year %></a>
         </div>
-      </article>
-    <% }); %>
-  </div>
+        <div class="archives">
+    <% } %>
+    <%- partial('archive-post', {post: post, even: i % 2 == 0}) %>
+  <% }) %>
+  <% if (page.posts.length){ %>
+    </div></section>
+  <% } %>
 <% } %>
