--- a/layout/_partial/post/category.ejs
+++ b/layout/_partial/post/category.ejs
@@ -1,7 +1,7 @@
-<% if (item.categories && item.categories.length){ %>
+<% if (post.categories && post.categories.length){ %>
   <%
   var cats = [];
-  item.categories.forEach(function(cat){
+  post.categories.forEach(function(cat){
     cats.push('<a href="' + config.root + cat.path + '">' + cat.name + '</a>');
   });
   %>
